# visual-workbench

./: .gitignore  README.md  pyproject.toml
fixtures/demo-artifacts/: model-explorer-contract.json  model-explorer-experiment.json  path-feedback-manifest.json  path-feedback-summary.json  path-planner-route.json  path-planner-sidecar.json
tests/: test_api.py  test_artifacts.py  test_commands.py
tests/e2e/: test_smoke.py
visual_workbench/: __init__.py  api.py  artifacts.py  commands.py
web/: index.html  package-lock.json  package.json
web/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
web/src/components/: EvidenceChainDrawer.tsx  LegacyWorkbenchViews.tsx  MissionEvidencePanel.tsx  MissionKpiStrip.tsx  MissionMap.tsx  MissionMapReplay.tsx  MissionStageRail.tsx  MissionStatusHeader.tsx  StageToolPanel.tsx  StageTools.tsx
web/src/domain/: missionCockpit.test.ts  missionCockpit.ts  missionStages.test.ts  missionStages.ts
