[project]
name = "visual-workbench"
version = "0.1.0"
description = "Artifact-first evidence workbench for lunar path planning."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.8",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["visual_workbench*"]
